# Non-destructive-image

./: .gitattributes  .gitignore  .zenodo.json  1 calculations revised 2  multishot  6  extended.ipynb  CITATION.cff  CODEX_HANDOFF_CURRENT.md  README.md  pyproject.toml
configs/: dissertation_figures_v1.json  dissertation_plots_v1.json  dissertation_plots_v2_orca_fusion.json  dissertation_results_v1.json  dissertation_v2_dcc3260m.json  dissertation_v3_orca_fusion.json  dpfi_initial_condition_suite_v1_orca_fusion_m10.json  figure_4_2.json  figure_5_1.json  figure_5_2.json  figure_5_4.json  notebook_aligned_figures_v1.json  notebook_v1_defaults.json  performance_validation_v1.json  reconstruction_credibility_v1.json  reconstruction_credibility_v2_orca_fusion_m10.json  reconstruction_curvature_range_check_v2_orca_fusion_m10_dark_field.json  reconstruction_curvature_range_check_v2_orca_fusion_m10_dual_port.json  reconstruction_morphology_benchmark_v3.json  reconstruction_morphology_benchmark_v4_orca_fusion_m10.json  reconstruction_v3.json  thesis_numerical_contract_v1.json
deliverables/: CODE_BUNDLE_README.md
docs/: README.md  absorption_calibration_readiness.md  accumulated_snr_full_physics_audit.md  accumulated_snr_invariance_deep_discussion.md  accumulated_snr_invariance_physics_audit.md  architecture.md  architecture_milestone_1_report.md  baseline_specification.md  camera_pipeline_milestone_report.md  closed_loop_calibration_architecture.md  code_notebook_pipeline_correspondence_audit.md  colab_validation.md  current_state_review.md  dissertation_plot_strategy.md  (+50 more)
(+364 files in other folders)
