[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "non-destructive-image-model"
version = "0.3.0"
description = "Forward and inverse modelling for minimally destructive ultracold-atom imaging"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
